--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,15 +27,20 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'com.android.support:support-v4:24.2.0'
     compile 'com.android.support:design:24.2.0'
-    compile 'com.firebaseui:firebase-ui-database:0.4.0'
-    compile 'com.google.firebase:firebase-auth:9.2.1'
+    compile 'com.google.firebase:firebase-messaging:9.2.1'
     compile 'com.google.firebase:firebase-database:9.2.1'
-    compile 'com.google.firebase:firebase-core:9.2.1'
+    compile 'com.google.firebase:firebase-storage:9.2.1'
+    compile 'com.firebase:firebase-client-android:2.3.1'
+    compile 'com.firebaseui:firebase-ui:0.4.3'
+    compile 'com.firebaseui:firebase-ui-database:0.4.3'
     compile 'com.google.android.gms:play-services-gcm:9.2.1'
     compile 'com.firebase:firebase-client-android:2.3.1'
     compile 'com.android.support:cardview-v7:24.2.0'
     compile 'com.android.support:palette-v7:24.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
+
+
 
 
 
