--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,34 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.proyectofootball.titanes.lfa" >
+    package="com.proyectofootball.titanes.lfa">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission-sdk-23 android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".Firebase.FireApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"/>
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".SplashScreen"
-            android:theme="@style/Theme.AppCompat.NoActionBar" >
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".DetalleEquipos"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".TopStories"/>
-        <activity android:name=".Teams"/>
-        <activity android:name=".Preferencias"/>
-        <activity android:name=".AcercaDe"/>
-        <activity android:name=".Standings"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".TopStories" />
+        <activity android:name=".Teams" />
+        <activity android:name=".Preferencias" />
+        <activity android:name=".AcercaDe" />
+        <activity android:name=".Standings" />
+        <activity android:name=".ParaPruebas"></activity>
     </application>
 
 </manifest>
