Se agrego el recyclerview a la lista de equipos, se cambio el nombre del activity a TeamsActivity y se hizo refactor para que el cambio aplique a todo. Se agrego butterknife a las librerías. falta terminar el listado de teams, de momento ya funciona al 100. Se cambio Noticias por noticias

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name=".DetalleEquipos"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".TopStories" />
-        <activity android:name=".Teams" />
+        <activity android:name=".TeamsActivity" />
         <activity android:name=".Preferencias" />
         <activity android:name=".AcercaDe" />
         <activity android:name=".Standings" />
