--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.0'
     compile 'com.android.support:palette-v7:24.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.jakewharton:butterknife:8.4.0'
+
 }
 
 
