--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,10 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:9.4.0'
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.firebase:firebase-storage:9.4.0'
+    compile 'com.google.firebase:firebase-ads:9.4.0'
+    compile "com.google.firebase:firebase-auth:9.4.0"
     compile 'com.firebaseui:firebase-ui:0.4.3'
     compile 'com.firebaseui:firebase-ui-database:0.4.3'
-    compile 'com.google.android.gms:play-services-gcm:9.4.0'
     compile 'com.android.support:cardview-v7:24.2.0'
     compile 'com.android.support:palette-v7:24.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
