--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        demo {
+            applicationId "com.proyectofootball.titanes.lfa"
+            versionName "1.0-demo"
+        }
+        full {
+            applicationId "com.proyectofootball.titanes.lfa"
+            versionName "1.0-full"
+        }
+    }
 
+    lintOptions {
+
+        checkReleaseBuilds false
+
+    }
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES.txt'
         exclude 'META-INF/LICENSE.txt'
